--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1113,7 +1113,7 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7YZ-ZF-u99" userLabel="View- ride request">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7YZ-ZF-u99" userLabel="View- ride request">
                                 <rect key="frame" x="0.0" y="59" width="320" height="147"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
@@ -1187,7 +1187,7 @@
                                             <action selector="decreaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="ljQ-XV-bWw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
                                         <rect key="frame" x="238" y="105" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="plus_new.png">
@@ -1197,7 +1197,7 @@
                                             <action selector="increaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="Gu5-aa-Alg"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
                                         <rect key="frame" x="91" y="103" width="139" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -1245,19 +1245,22 @@
                                     <outlet property="delegate" destination="gzB-dY-rge" id="cVN-PG-0e6"/>
                                 </connections>
                             </mapView>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="E5D0628A-1448-49FA-8AC0-1F9814C98FC0" colorSpace="pattern"/>
+                                <color key="color" patternImage="4D847861-1844-419B-BD7E-78BC9B9ED7FE" colorSpace="pattern"/>
                             </activityIndicatorView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="find-crew-wood.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wood-grain-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="522" width="320" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-k0-yGT">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WEi-k0-yGT">
                                 <rect key="frame" x="91" y="530" width="138" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.25882352941176467" green="0.62745098039215685" blue="0.66274509803921566" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="aKN-8x-1dX"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="Request A Ride">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -1274,12 +1277,18 @@
                         </subviews>
                         <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="7XM-fk-vcd" secondAttribute="centerX" constant="-0.5" id="dEs-Dg-0di"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerX" secondItem="rIt-U9-bXz" secondAttribute="centerX" id="4Lq-es-zPu"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="top" secondItem="RED-KU-XOZ" secondAttribute="bottom" constant="4" id="5p2-BD-OxV"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerX" secondItem="7YZ-ZF-u99" secondAttribute="centerX" id="9jd-B6-JVf"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerY" secondItem="rIt-U9-bXz" secondAttribute="centerY" id="DFZ-Cc-8qy"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerX" secondItem="3bp-9g-MYM" secondAttribute="centerX" id="Kod-kG-yQu"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="leading" secondItem="VJT-lO-FNI" secondAttribute="leading" constant="91" id="RDt-8D-GqQ"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerX" secondItem="RED-KU-XOZ" secondAttribute="centerX" id="d8k-8m-rVK"/>
                             <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="rIt-U9-bXz" secondAttribute="bottom" id="fSb-do-eoy"/>
                             <constraint firstItem="RED-KU-XOZ" firstAttribute="top" secondItem="7YZ-ZF-u99" secondAttribute="bottom" id="hyL-d3-Yof"/>
                             <constraint firstItem="3bp-9g-MYM" firstAttribute="top" secondItem="IqP-mX-llD" secondAttribute="bottom" constant="-5" id="nM9-cB-vvk"/>
-                            <constraint firstItem="1ps-7k-reJ" firstAttribute="top" secondItem="WEi-k0-yGT" secondAttribute="bottom" constant="8" id="qLR-TE-biV"/>
                             <constraint firstItem="7YZ-ZF-u99" firstAttribute="top" secondItem="3bp-9g-MYM" secondAttribute="bottom" id="u1A-1R-bwS"/>
+                            <constraint firstItem="WEi-k0-yGT" firstAttribute="centerX" secondItem="7XM-fk-vcd" secondAttribute="centerX" id="wxM-6w-4pI"/>
                             <constraint firstAttribute="centerY" secondItem="7XM-fk-vcd" secondAttribute="centerY" constant="34.5" id="zbU-s0-gFY"/>
                         </constraints>
                     </view>
@@ -1486,7 +1495,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="109" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="681365E4-E4EF-4108-9F44-B2816631C96A" colorSpace="pattern"/>
+                                        <color key="color" patternImage="5F048510-CDA2-480E-981C-4D45B9D5D0CF" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
                                         <rect key="frame" x="20" y="82" width="280" height="83"/>
@@ -1814,7 +1823,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="681365E4-E4EF-4108-9F44-B2816631C96A" width="320" height="460">
+        <image name="4D847861-1844-419B-BD7E-78BC9B9ED7FE" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11701,7 +11710,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="E5D0628A-1448-49FA-8AC0-1F9814C98FC0" width="320" height="460">
+        <image name="5F048510-CDA2-480E-981C-4D45B9D5D0CF" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -21590,7 +21599,6 @@ AAAAAAAAAAAJCvs
         </image>
         <image name="Icon.png" width="60" height="60"/>
         <image name="credit-card.png" width="28" height="18"/>
-        <image name="find-crew-wood.png" width="320" height="55"/>
         <image name="footer.png" width="320" height="170"/>
         <image name="from-to-v4.png" width="320" height="144"/>
         <image name="help.png" width="22" height="22"/>
@@ -21602,6 +21610,7 @@ AAAAAAAAAAAJCvs
         <image name="reveal-icon.png" width="22" height="17"/>
         <image name="ride_credits.png" width="24" height="24"/>
         <image name="right_new.png" width="36" height="36"/>
+        <image name="wood-grain-2.png" width="320" height="46"/>
         <image name="wood-with-portholes_v3.png" width="320" height="126"/>
     </resources>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
