--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -561,7 +561,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wED-MA-BfT">
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wED-MA-BfT">
                                 <rect key="frame" x="0.0" y="16" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.3654864793" green="0.74776785710000004" blue="0.74298150190000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -580,36 +580,55 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PrF-mo-JcJ" customClass="FBProfilePictureView">
-                                <rect key="frame" x="110" y="143" width="100" height="100"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PrF-mo-JcJ" customClass="FBProfilePictureView">
+                                <rect key="frame" x="110" y="135" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.47843137250000001" green="0.78039215689999997" blue="0.81176470590000005" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFc-yy-CbB">
-                                <rect key="frame" x="80" y="251" width="160" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFc-yy-CbB">
+                                <rect key="frame" x="35" y="251" width="251" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="uv4-JN-pzZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="l9M-yk-gYe">
-                                <rect key="frame" x="0.0" y="352" width="320" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="footer.png" translatesAutoresizingMaskIntoConstraints="NO" id="l9M-yk-gYe">
+                                <rect key="frame" x="0.0" y="440" width="320" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="lG2-C9-niG"/>
+                                </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aXB-0Q-gBP" customClass="FBLoginView">
-                                <rect key="frame" x="35" y="407" width="251" height="141"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aXB-0Q-gBP" customClass="FBLoginView">
+                                <rect key="frame" x="35" y="504" width="251" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.47843137254901957" green="0.7803921568627451" blue="0.81176470588235294" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Fch-Fk-qud" firstAttribute="top" secondItem="l9M-yk-gYe" secondAttribute="bottom" id="1SU-zB-pqP"/>
-                            <constraint firstItem="wED-MA-BfT" firstAttribute="top" secondItem="7VX-I3-nc4" secondAttribute="bottom" constant="-4" id="47O-e0-62p"/>
-                            <constraint firstAttribute="centerX" secondItem="PrF-mo-JcJ" secondAttribute="centerX" id="9X4-pf-WDE"/>
-                            <constraint firstItem="cFc-yy-CbB" firstAttribute="top" secondItem="PrF-mo-JcJ" secondAttribute="bottom" constant="8" id="OSS-Xo-qtw"/>
-                            <constraint firstAttribute="centerX" secondItem="aXB-0Q-gBP" secondAttribute="centerX" constant="-0.5" id="aWs-Yo-xl2"/>
-                            <constraint firstAttribute="centerY" secondItem="PrF-mo-JcJ" secondAttribute="centerY" constant="47" id="c4B-0t-d0A"/>
-                            <constraint firstItem="Fch-Fk-qud" firstAttribute="top" secondItem="aXB-0Q-gBP" secondAttribute="bottom" constant="20" id="oWM-fb-cHl"/>
+                            <constraint firstItem="wED-MA-BfT" firstAttribute="leading" secondItem="l9M-yk-gYe" secondAttribute="leading" id="2yZ-Rg-xwK"/>
+                            <constraint firstItem="cFc-yy-CbB" firstAttribute="trailing" secondItem="aXB-0Q-gBP" secondAttribute="trailing" id="8o7-xo-4Si"/>
+                            <constraint firstAttribute="bottom" secondItem="l9M-yk-gYe" secondAttribute="bottom" id="95O-5N-Wgn"/>
+                            <constraint firstItem="l9M-yk-gYe" firstAttribute="trailing" secondItem="wED-MA-BfT" secondAttribute="trailing" id="A8i-aI-06G"/>
+                            <constraint firstItem="PrF-mo-JcJ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="110" id="Ctj-oL-5wK"/>
+                            <constraint firstItem="l9M-yk-gYe" firstAttribute="centerX" secondItem="aXB-0Q-gBP" secondAttribute="centerX" id="HCk-4e-GBU"/>
+                            <constraint firstItem="wED-MA-BfT" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="16" id="L6a-mP-h8R"/>
+                            <constraint firstItem="cFc-yy-CbB" firstAttribute="top" secondItem="PrF-mo-JcJ" secondAttribute="bottom" constant="16" id="MqE-ER-CtF"/>
+                            <constraint firstAttribute="bottom" secondItem="aXB-0Q-gBP" secondAttribute="bottom" constant="20" symbolic="YES" id="NDq-Ii-eED"/>
+                            <constraint firstItem="wED-MA-BfT" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="QLa-9W-6Fd"/>
+                            <constraint firstItem="cFc-yy-CbB" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="35" id="dhx-DK-MMt"/>
+                            <constraint firstItem="PrF-mo-JcJ" firstAttribute="top" secondItem="wED-MA-BfT" secondAttribute="bottom" constant="75" id="ekp-vC-MH7"/>
+                            <constraint firstItem="cFc-yy-CbB" firstAttribute="centerX" secondItem="PrF-mo-JcJ" secondAttribute="centerX" id="pLr-rg-fFR"/>
+                            <constraint firstItem="cFc-yy-CbB" firstAttribute="leading" secondItem="aXB-0Q-gBP" secondAttribute="leading" id="rE7-gU-y0p"/>
+                            <constraint firstItem="aXB-0Q-gBP" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="504" id="y1Y-WD-9XJ"/>
+                            <constraint firstItem="cFc-yy-CbB" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="251" id="yZD-y1-gwi"/>
                         </constraints>
                     </view>
                     <connections>
@@ -621,7 +640,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="30" y="-659"/>
+            <point key="canvasLocation" x="30" y="-713"/>
         </scene>
         <!--Receipt Email View Controller-->
         <scene sceneID="T5s-3p-ytz">
@@ -1187,7 +1206,7 @@
                                             <action selector="decreaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="ljQ-XV-bWw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3f4-T4-Cdd" userLabel="increase time button">
                                         <rect key="frame" x="238" y="105" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" image="plus_new.png">
@@ -1197,7 +1216,7 @@
                                             <action selector="increaseRideTimeButtonTapped:" destination="gzB-dY-rge" eventType="touchUpInside" id="Gu5-aa-Alg"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:00 - 10:15 pm" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bO-1R-ukM" userLabel="rideTime">
                                         <rect key="frame" x="91" y="103" width="139" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -1248,7 +1267,7 @@
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="142" y="231" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="4D847861-1844-419B-BD7E-78BC9B9ED7FE" colorSpace="pattern"/>
+                                <color key="color" patternImage="A117D3DE-1135-40DF-AF7C-E3187278C0FB" colorSpace="pattern"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wood-grain-2.png" translatesAutoresizingMaskIntoConstraints="NO" id="rIt-U9-bXz">
                                 <rect key="frame" x="0.0" y="522" width="320" height="46"/>
@@ -1495,7 +1514,7 @@
                                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                         <rect key="frame" x="135" y="109" width="37" height="37"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="color" patternImage="5F048510-CDA2-480E-981C-4D45B9D5D0CF" colorSpace="pattern"/>
+                                        <color key="color" patternImage="7E7631AF-3475-4872-9DE3-597D7C72197B" colorSpace="pattern"/>
                                     </activityIndicatorView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ride to work tomorrow between 10:30 - 10:45 am" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3Me-33-mwi">
                                         <rect key="frame" x="20" y="82" width="280" height="83"/>
@@ -1823,7 +1842,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="4D847861-1844-419B-BD7E-78BC9B9ED7FE" width="320" height="460">
+        <image name="7E7631AF-3475-4872-9DE3-597D7C72197B" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -11710,7 +11729,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="5F048510-CDA2-480E-981C-4D45B9D5D0CF" width="320" height="460">
+        <image name="A117D3DE-1135-40DF-AF7C-E3187278C0FB" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -21621,9 +21640,9 @@ AAAAAAAAAAAJCvs
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="pAS-ik-Ig1"/>
-        <segue reference="ozj-xX-N4X"/>
         <segue reference="nz4-w7-m9s"/>
         <segue reference="WTk-75-MPQ"/>
-        <segue reference="R97-G3-Fuo"/>
+        <segue reference="ojm-M0-nu7"/>
+        <segue reference="wbq-E7-Ekt"/>
     </inferredMetricsTieBreakers>
 </document>
